# Jacobi3D_CGAL

./: .gitignore  CGAL_Walk.cpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Erode.py  Jacobi  Jacobi3d.cpp  Jacobi3d.h  Makefile  README.md  Remove_Free_Faces.py  Resample  Walk  Walk.py  WalkPrune.py  WriteVTP.py  cmake_install.cmake  data.vti  data_generator.py  main.cpp  refine.cpp  resample.cpp  resample.py  walk.cpp
Test/: Test.txt  Test_field.raw  Test_jacobi.off  Test_jacobi.vtp  Test_triangulated.raw
halfsphere_30_30_30/: halfsphere_30_30_30.raw  halfsphere_30_30_30.txt  halfsphere_30_30_30_Jacobi.txt  halfsphere_30_30_30_field.raw  halfsphere_30_30_30_final.off  halfsphere_30_30_30_final.txt  halfsphere_30_30_30_final.vtp  halfsphere_30_30_30_jacobi.off  halfsphere_30_30_30_jacobi.vtp  halfsphere_30_30_30_pruned_jacobi.off  halfsphere_30_30_30_pruned_jacobi.txt  halfsphere_30_30_30_pruned_jacobi.vtp  halfsphere_30_30_30_pruned_walked.off  halfsphere_30_30_30_pruned_walked.txt  halfsphere_30_30_30_pruned_walked.vtp  halfsphere_30_30_30_resampled.txt  halfsphere_30_30_30_resampled_field.raw  halfsphere_30_30_30_resampled_vert.txt  halfsphere_30_30_30_vert.txt
inside_30_30_30/: inside_30_30_30.raw  inside_30_30_30.txt  inside_30_30_30_Jacobi.txt  inside_30_30_30_field.raw  inside_30_30_30_jacobi.off  inside_30_30_30_jacobi.vtp  inside_30_30_30_pruned_jacobi.off  inside_30_30_30_triangulated.off  inside_30_30_30_v2_resampled.txt  inside_30_30_30_v2_resampled_vert.txt
inside_30_30_30_v2/: inside_30_30_30_v2.raw  (+22 more)
(+78 files in other folders)
